--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test": "NODE_OPTIONS='--experimental-vm-modules' jest --silent",
+		"test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --silent",
 		"start": "nodemon index.js",
 		"format": "npx @biomejs/biome format --write './'",
 		"lint": "npx @biomejs/biome lint --write './'"
@@ -24,5 +24,8 @@
 		"@biomejs/biome": "^1.9.4",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.7"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3"
 	}
 }
